Fixing aligning issue with the toggle pickers

--- a/src/css/_widgets.react.css
+++ b/src/css/_widgets.react.css
@@ -60,9 +60,15 @@
     cursor: pointer;
     vertical-align: middle;
     margin-top: -0.15em;
+    display: flex;
+}
+
+.widget-toggle label {
+    display: flex;
 }
 
 .widget-toggle input[type=checkbox] {
+    position: relative;
     outline: none;
     margin-top: -0.15em;
 }
